Implementing Semantic Cache